# daily-digest

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  main.py  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci-cd.yml
debug/: debug_selectors.py  inspect_sites.py  test_scraper.py
src/: scheduler.py
src/processor/: sentiment_analyzer.py  summarizer.py  text_processor.py  trending_analyzer.py
src/scraper/: base_scraper.py  content_extractor.py  news_sources.py
src/storage/: database.py  models.py
src/utils/: config.py  email_service.py  export_service.py
src/web/: app.py
src/web/templates/: analytics.html  article.html  base.html  index.html  search.html  trending_email.html
tests/: test_api.py  test_database.py  test_processor.py  test_scraper.py
